# ria

./: content.md  page_instructions.md  pyproject.toml  ria.md
src/ria/: __init__.py
src/ria/templates/: aboutme.html  base.html  home.html
