[project]
name = "ria"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andy Miles", email = "arrivingskillsai@outlook.com" }
]
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
]

[project.scripts]
ria = "ria:main"

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"
